syntax = "proto3";

package auth;

option go_package = "bili-main/pkg/pb/auth;authpb";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterResponse {
    string userid =1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
    string username = 3;
    string nickname = 4;
}

message LogoutRequest {
    string userid = 1;
}

message LogoutResponse {
    
}

message RefreshTokenRequest{
    string userid = 1;
}

message RefreshTokenResponse{
    string access_token = 1;
}